Added category links with some basic styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,8 @@ body {
   width: 100%;
 }
 
+/* TRENDING/SEARCHED GIFS */
+
 .gifs {
   display: flex;
   flex-direction: column;
@@ -79,5 +81,43 @@ body {
 
 .gifs-image {
   height: 150px;
+  width: auto;
+}
+
+/* CATEGORIES */
+
+.categories {
+  display: flex;
+  flex-direction: column;
+}
+
+.categories-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.categories-li {
+  height: 175px;
+}
+
+.category-link {
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.category-title {
+  position: absolute;
+  display: none;
+}
+
+.category-link:hover .category-title {
+  display: block;
+}
+
+.category-image {
+  height: 100%;
   width: auto;
 }
