--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body {
 
 .gifs-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .gifs-image {
@@ -99,10 +100,6 @@ body {
 
 .categories-li {
   height: 175px;
-}
-
-.category-link {
-  height: 100%;
   position: relative;
   display: flex;
   align-items: center;
@@ -118,7 +115,8 @@ body {
   align-items: center;
 }
 
-.category-link:hover .category-title {
+.categories-li:hover .category-title {
+  cursor: pointer;
   display: flex;
   background-color: rgba(75, 75, 75, 0.466);
 }
