--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,13 @@ body {
   font-weight: 600;
 }
 
+.nav-categories-li:hover {
+  cursor: pointer;
+  font-weight: 700;
+  color: pink;
+  border-bottom: 3px solid pink;
+}
+
 .search-bar {
   width: 100%;
   height: 55px;
@@ -66,6 +73,7 @@ body {
 
 .main {
   width: 100%;
+  margin-bottom: 20px;
 }
 
 /* TRENDING/SEARCHED GIFS */
@@ -78,11 +86,17 @@ body {
 .gifs-list {
   display: flex;
   flex-wrap: wrap;
+  /* justify-content: space-between; */
 }
 
-.gifs-image {
-  height: 150px;
+.gifs-li {
+  height: 175px;
   width: auto;
+  margin: 5px;
+}
+
+.gifs-img {
+  height: 100%;
 }
 
 /* CATEGORIES */
@@ -100,6 +114,7 @@ body {
 
 .categories-li {
   height: 175px;
+  margin: 5px;
   position: relative;
   display: flex;
   align-items: center;
