--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,8 @@ body {
 }
 
 .nav-bar {
-  width: 100%;
-  padding: 15px;
+  width: 1040px;
+  margin: 20px 0 10px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -53,7 +53,7 @@ body {
 }
 
 .main {
-  width: 1200px;
+  width: 1040px;
   margin-bottom: 20px;
   display: flex;
   flex-direction: column;
@@ -62,8 +62,9 @@ body {
 }
 
 .search-bar {
-  width: 1200px;
+  width: 100%;
   height: 55px;
+  margin: 10px 0;
   display: flex;
   align-items: center;
 }
@@ -80,29 +81,31 @@ body {
   background-color: white;
 }
 
-/* TRENDING/SEARCHED GIFS */
-
 .gifs {
   display: flex;
   flex-direction: column;
 }
 
+.gifs-title {
+  margin: 10px 0;
+  font-size: 26px;
+}
+
 .gifs-container {
-  width: 1200px;
+  width: 100%;
 }
 
 .gifs-list {
-  width: 1200px;
+  width: 100%;
   line-height: 0;
   -webkit-column-count: 4;
   -moz-column-count: 4;
   column-count: 4;
+  column-gap: 5px;
 }
 
 .gifs-li {
-  width: 100% !important;
-  height: auto !important;
-  margin: 5px 0;
+  margin-bottom: 5px;
 }
 
 .gifs-img {
@@ -113,49 +116,41 @@ body {
 
 /* CATEGORIES */
 
-.categories {
-  /* display: flex;
-  flex-direction: column; */
+.categories-container {
+  width: 100%;
 }
 
 .categories-list {
-  line-height: 0;
-  -webkit-column-count: 4;
-  -webkit-column-gap: 0px;
-  -moz-column-count: 4;
-  -moz-column-gap: 0px;
-  column-count: 4;
-  column-gap: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .categories-li {
-  /* height: 175px; */
-  margin: 5px;
+  width: 255px;
+  height: 136px;
+  margin-right: 5px;
+  margin-bottom: 5px;
   position: relative;
-  /* display: flex;
+  text-align: center;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: center; */
-
-  width: auto !important;
-  height: auto !important;
+  overflow: hidden;
 }
 
 .category-title {
   position: absolute;
-  display: none;
-  height: 100%;
-  width: 300px;
-  justify-content: center;
-  align-items: center;
-}
-
-.categories-li:hover .category-title {
   cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 600;
+  height: 100%;
+  width: 100%;
   display: flex;
-  background-color: rgba(75, 75, 75, 0.466);
+  align-items: center;
+  justify-content: center;
 }
 
 .category-image {
-  height: 100%;
-  width: 300px;
+  width: 100%;
 }
