--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,18 @@ body {
 }
 
 .nav-bar-logo {
+  padding-right: 3px;
   font-size: 34px;
   font-weight: 900;
+  background: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .nav-categories-ul {
@@ -39,7 +49,15 @@ body {
 }
 
 .nav-categories-li {
-  border-bottom: 3px solid white;
+  border-image-source: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 100%,
+    rgba(252, 176, 69, 1) 100%
+  );
+  border-bottom-width: 3px;
+  border-bottom-style: solid;
+  border-image-slice: 1;
   padding: 5px 8px;
   font-size: 16px;
   font-weight: 600;
@@ -48,8 +66,7 @@ body {
 .nav-categories-li:hover {
   cursor: pointer;
   font-weight: 700;
-  color: pink;
-  border-bottom: 3px solid pink;
+  background-color: rgb(0, 119, 255);
 }
 
 .main {
@@ -80,13 +97,19 @@ body {
   width: 6%;
   height: 100%;
   color: rgb(20, 20, 20);
-  background-color: white;
+  background-image: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 100%,
+    rgba(252, 176, 69, 1) 100%
+  );
   border: none;
 }
 
 .search-icon {
   height: 50%;
   width: 100%;
+  fill: #fff;
 }
 
 .gifs {
